fixed font size on mobile

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -504,9 +504,3 @@ body {
   top: 0;
   left: 0;
 }
-
-@media only screen and (max-width: 768px){
-	p, li{
-		font-size: 16px;
-	}
-}
